# Atlas

./: .gitignore  PLAN_backend.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
public/data/: ai-adoption.json  gdp.json  happiness.json  hdi.json  mobile-desktop.json  satellites.json
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
server/src/: catalog.rs  celestrak.rs  config.rs  conjunctions.rs  main.rs  propagate.rs  protocol.rs  viewport.rs  ws.rs
src/: App.tsx  index.css  vite-env.d.ts
src/components/map/: Map.tsx
src/components/overlays/: AntipodeLabel.test.tsx  AntipodeLabel.tsx  BrandStrip.test.tsx  (+15 more)
src/data/: layers.config.ts
src/hooks/: useAurora.ts  useDataLayer.ts
src/lib/: antipode.test.ts  antipode.ts  aurora.test.ts  aurora.ts  colorScales.test.ts  colorScales.ts  conjunctionEndpointLayer.ts  conjunctionLineLayer.ts  conjunctionMidpointLayer.ts  countryRank.test.ts  countryRank.ts  ghostGeometry.test.ts  ghostGeometry.ts  greatCircle.test.ts  greatCircle.ts  mapPaint.test.ts  mapPaint.ts  orbitStream.test.ts  orbitStream.ts  satelliteCatalog.test.ts  satelliteCatalog.ts  satelliteHoverLayer.ts  satelliteLayer.ts  satelliteOrbitLayer.ts  satelliteOrbital.test.ts  satelliteOrbital.ts  satellitePicking.test.ts  satellitePicking.ts  satelliteSelectionLayer.ts  satelliteTLE.test.ts  satelliteTLE.ts  satellites.test.ts  satellites.ts  solarTerminator.test.ts  solarTerminator.ts
src/stores/: useAtlasStore.test.ts  useAtlasStore.ts
src/types/: atlas.ts
