[package]
name = "atlas-orbit"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
sgp4 = "2"
arc-swap = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
